pin/source/tools/PAS/out
g++ -Wall -Werror -Wno-unknown-pragmas -D__PIN__=1 -DPIN_CRT=1 -fno-stack-protector -fno-exceptions -funwind-tables -fasynchronous-unwind-tables -fno-rtti -DTARGET_IA32E -DHOST_IA32E -fPIC -DTARGET_LINUX -fabi-version=2  -I../../../source/include/pin -I../../../source/include/pin/gen -I. -isystem /home/carr/vaccs/dynamic_analysis/pin/extras/stlport/include -isystem /home/carr/vaccs/dynamic_analysis/pin/extras/libstdc++/include -isystem /home/carr/vaccs/dynamic_analysis/pin/extras/crt/include -isystem /home/carr/vaccs/dynamic_analysis/pin/extras/crt/include/arch-x86_64 -isystem /home/carr/vaccs/dynamic_analysis/pin/extras/crt/include/kernel/uapi -isystem /home/carr/vaccs/dynamic_analysis/pin/extras/crt/include/kernel/uapi/asm-x86  -I../../../extras/components/include -I../../../extras/xed-intel64/include/xed -I../../../source/tools/InstLib -O3 -fomit-frame-pointer -fno-strict-aliasing  -g -I../../../../vaccs_pin_cpp/libs  -c -o obj-intel64/memory_access.o memory_access.cpp
memory_access.cpp: In function ‘void write_array_element_record(cu_table*, var_upd_record*, INT32, std::string, std::string, int)’:
memory_access.cpp:274:71: error: no matching function for call to ‘var_record::read_value(type_table*&, type_record*)’
                ->add_value(varec->read_value(ttab,ttab->get(base_type)),
                                                                       ^
In file included from ../../../../vaccs_pin_cpp/libs/tables/cu_table.h:12:0,
                 from ../../../../vaccs_pin_cpp/libs/vaccs_read/vaccs_dw_reader.h:14,
                 from global.h:15,
                 from memory_access.cpp:11:
../../../../vaccs_pin_cpp/libs/tables/var_table.h:394:9: note: candidate: std::string var_record::read_value(type_table*, type_record*, Generic)
  string read_value(type_table *ttab,type_record *trec, Generic addr);
         ^~~~~~~~~~
../../../../vaccs_pin_cpp/libs/tables/var_table.h:394:9: note:   candidate expects 3 arguments, 2 provided
memory_access.cpp:306:71: error: no matching function for call to ‘var_record::read_value(type_table*&, type_record*)’
                ->add_value(varec->read_value(ttab,ttab->get(base_type)),
                                                                       ^
In file included from ../../../../vaccs_pin_cpp/libs/tables/cu_table.h:12:0,
                 from ../../../../vaccs_pin_cpp/libs/vaccs_read/vaccs_dw_reader.h:14,
                 from global.h:15,
                 from memory_access.cpp:11:
../../../../vaccs_pin_cpp/libs/tables/var_table.h:394:9: note: candidate: std::string var_record::read_value(type_table*, type_record*, Generic)
  string read_value(type_table *ttab,type_record *trec, Generic addr);
         ^~~~~~~~~~
../../../../vaccs_pin_cpp/libs/tables/var_table.h:394:9: note:   candidate expects 3 arguments, 2 provided
memory_access.cpp: In function ‘void write_struct_record(cu_table*, var_upd_record*, INT32, std::string, std::string, int)’:
memory_access.cpp:355:3: error: expected ‘)’ before ‘write_element_record’
   write_element_record(cutab,nvurec,line,fileName,*trec->get_name() + ":",event_num);
   ^~~~~~~~~~~~~~~~~~~~
memory_access.cpp:357:55: error: base operand of ‘->’ has non-pointer type ‘std::string {aka std::basic_string<char, std::char_traits<char>, std::allocator<char> >}’
          member_address += ttab->get(mvrec->get_type()->get_size();
                                                       ^~
memory_access.cpp:374:79: error: no matching function for call to ‘var_record::read_value(type_table*&, type_record*)’
                ->add_value(mvrec->read_value(ttab,ttab->get(mvrec->get_type())),
                                                                               ^
In file included from ../../../../vaccs_pin_cpp/libs/tables/cu_table.h:12:0,
                 from ../../../../vaccs_pin_cpp/libs/vaccs_read/vaccs_dw_reader.h:14,
                 from global.h:15,
                 from memory_access.cpp:11:
../../../../vaccs_pin_cpp/libs/tables/var_table.h:394:9: note: candidate: std::string var_record::read_value(type_table*, type_record*, Generic)
  string read_value(type_table *ttab,type_record *trec, Generic addr);
         ^~~~~~~~~~
../../../../vaccs_pin_cpp/libs/tables/var_table.h:394:9: note:   candidate expects 3 arguments, 2 provided
memory_access.cpp: In function ‘void write_element_record(cu_table*, var_upd_record*, INT32, std::string, std::string, int)’:
memory_access.cpp:401:56: error: ‘addr’ was not declared in this scope
                                    vurec->get_scope(), addr, *trec->get_name(), vurec->get_value(),
                                                        ^~~~
memory_access.cpp:401:56: note: suggested alternative: ‘vdr’
                                    vurec->get_scope(), addr, *trec->get_name(), vurec->get_value(),
                                                        ^~~~
                                                        vdr
memory_access.cpp:401:88: error: ‘class var_upd_record’ has no member named ‘get_value’; did you mean ‘add_value’?
                                    vurec->get_scope(), addr, *trec->get_name(), vurec->get_value(),
                                                                                        ^~~~~~~~~
                                                                                        add_value
../../../source/tools/Config/makefile.default.rules:196: recipe for target 'obj-intel64/memory_access.o' failed
make: *** [obj-intel64/memory_access.o] Error 1
